@@ -53,6 +53,8 @@ dpkg (1.17.14) UNRELEASED; urgency=low
     affects error messages from partial or broken .deb packages for example.
     Regression introduced in dpkg 1.17.10. Closes: #759498
   * Remove lpia architecture support.
+  * Improvements and portability fixes to start-stop-daemon:
+    - Abort if the system or compatibility setsid() fails.
 
   [ Raphaël Hertzog ]
   * Explain better in deb-triggers(5) why interest/activate-noawait should be
